--- a/packages/i18n/src/locales/es.i18n.json
+++ b/packages/i18n/src/locales/es.i18n.json
@@ -4796,11 +4796,11 @@
   "registration.page.resetPassword.sent": "Si este correo electrónico está registrado, te enviaremos instrucciones para restablecer tu contraseña. Si no recibes un correo en breve, vuelve e inténtalo de nuevo.",
   "registration.page.resetPassword.sendInstructions": "Enviar instrucciones",
   "registration.page.resetPassword.errors.invalidEmail": "Correo electrónico no válido",
-  "registration.page.poweredBy": "Desarrollado por <1>SMC-Chat</1>",
+  "registration.page.poweredBy": "Desarrollado por SMC-Chat",
   "registration.page.guest.chooseHowToJoin": "Elige cómo quieres unirte.",
   "registration.page.guest.loginWithRocketChat": "Iniciar sesión con SMC-Chat",
   "registration.page.guest.continueAsGuest": "Continuar como invitado",
-  "registration.component.welcome": "Bienvenido al espacio de trabajo de <1>SMC-Chat</1> ",
+  "registration.component.welcome": "Bienvenido al espacio de trabajo de SMC-Chat ",
   "registration.component.login": "Iniciar sesión",
   "registration.component.login.userNotFound": "Usuario no encontrado",
   "registration.component.login.incorrectPassword": "Contraseña incorrecta",
