--- a/packages/i18n/src/locales/fi.i18n.json
+++ b/packages/i18n/src/locales/fi.i18n.json
@@ -5526,11 +5526,11 @@
   "registration.page.resetPassword.sent": "Jos tämä sähköpostiosoite on rekisteröity, lähetämme salasanan nollausohjeet. Jos et saa sähköpostia pian, palaa ja yritä uudelleen.",
   "registration.page.resetPassword.sendInstructions": "Lähetä ohjeet",
   "registration.page.resetPassword.errors.invalidEmail": "Virheellinen sähköpostiosoite",
-  "registration.page.poweredBy": "Palvelun tarjoaa <1>SMC-Chat</1>",
+  "registration.page.poweredBy": "Palvelun tarjoaa SMC-Chat",
   "registration.page.guest.chooseHowToJoin": "Valitse, miten haluat liittyä",
   "registration.page.guest.loginWithRocketChat": "Kirjaudu sisään SMC-Chatilla",
   "registration.page.guest.continueAsGuest": "Jatka vieraana",
-  "registration.component.welcome": "Tervetuloa <1>SMC-Chat</1>-työtilaan",
+  "registration.component.welcome": "Tervetuloa SMC-Chat-työtilaan",
   "registration.component.login": "Kirjaudu",
   "registration.component.login.userNotFound": "Käyttäjää ei löydy",
   "registration.component.login.incorrectPassword": "Väärä salasana",
