--- a/packages/i18n/src/locales/hi-IN.i18n.json
+++ b/packages/i18n/src/locales/hi-IN.i18n.json
@@ -5810,11 +5810,11 @@
   "registration.page.resetPassword.sent": "यदि यह ईमेल पंजीकृत है, तो हम आपका पासवर्ड रीसेट करने के तरीके पर निर्देश भेजेंगे। यदि आपको शीघ्र ही कोई ईमेल प्राप्त नहीं होता है, तो कृपया वापस आएं और पुनः प्रयास करें।",
   "registration.page.resetPassword.sendInstructions": "निर्देश भेजें",
   "registration.page.resetPassword.errors.invalidEmail": "अमान्य ईमेल",
-  "registration.page.poweredBy": "<1>SMC-Chat</1> द्वारा संचालित",
+  "registration.page.poweredBy": "SMC-Chat द्वारा संचालित",
   "registration.page.guest.chooseHowToJoin": "चुनें कि आप कैसे शामिल होना चाहते हैं",
   "registration.page.guest.loginWithRocketChat": "SMC-Chat के साथ लॉगिन करें",
   "registration.page.guest.continueAsGuest": "अतिथि के रूप में जारी रखें",
-  "registration.component.welcome": "<1>SMC-Chat</1> कार्यक्षेत्र में आपका स्वागत है",
+  "registration.component.welcome": "SMC-Chat कार्यक्षेत्र में आपका स्वागत है",
   "registration.component.login": "लॉग इन करें",
   "registration.component.login.userNotFound": "उपयोगकर्ता नहीं मिला",
   "registration.component.login.incorrectPassword": "गलत पासवर्ड",
