--- a/packages/i18n/src/locales/hu.i18n.json
+++ b/packages/i18n/src/locales/hu.i18n.json
@@ -5315,8 +5315,8 @@
   "registration.page.resetPassword.sent": "Ha ez az e-mail-cím regisztrálva van, akkor utasításokat küldünk a jelszó visszaállításához. Ha nem kap rövidesen e-mailt, akkor térjen vissza, és próbálja meg újra.",
   "registration.page.resetPassword.sendInstructions": "Utasítások küldése",
   "registration.page.resetPassword.errors.invalidEmail": "Érvénytelen e-mail-cím",
-  "registration.page.poweredBy": "A gépházban: <1>SMC-Chat</1>",
-  "registration.component.welcome": "Üdvözöljük a <1>SMC-Chat</1> munkaterületén!",
+  "registration.page.poweredBy": "A gépházban: SMC-Chat",
+  "registration.component.welcome": "Üdvözöljük a SMC-Chat munkaterületén!",
   "registration.component.login": "Bejelentkezés",
   "registration.component.login.userNotFound": "A felhasználó nem található",
   "registration.component.login.incorrectPassword": "Hibás jelszó",
