--- a/packages/i18n/src/locales/sv.i18n.json
+++ b/packages/i18n/src/locales/sv.i18n.json
@@ -5535,11 +5535,11 @@
   "registration.page.resetPassword.sent": "Om det här e-postmeddelandet är registrerat skickar vi instruktioner om hur du återställer ditt lösenord. Om du inte får ett mail inom kort, vänligen kom tillbaka och försök igen.",
   "registration.page.resetPassword.sendInstructions": "Skicka instruktioner",
   "registration.page.resetPassword.errors.invalidEmail": "Ogiltig e-postadress",
-  "registration.page.poweredBy": "Drivs av <1>SMC-Chat</1>",
+  "registration.page.poweredBy": "Drivs av SMC-Chat",
   "registration.page.guest.chooseHowToJoin": "Välj hur du vill ansluta",
   "registration.page.guest.loginWithRocketChat": "Logga in med SMC-Chat",
   "registration.page.guest.continueAsGuest": "Fortsätt som gäst",
-  "registration.component.welcome": "Välkommen till <1>SMC-Chat</1>",
+  "registration.component.welcome": "Välkommen till SMC-Chat",
   "registration.component.login": "Logga in",
   "registration.component.login.userNotFound": "Användare inte hittad",
   "registration.component.login.incorrectPassword": "Felaktigt lösenord",
